force-app/main/default/objects/Volume__c/Volume__c.object-meta.xml
<CustomObject>
    <label>Volume</label>
    <nameField>
        <label>Volume Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volumes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>