force-app/main/default/objects/Volume__c/fields/Volume_UOM_To__c.field-meta.xml
<CustomField>
    <fullName>Volume_UOM_To__c</fullName>
    <label>Volume_UOM_To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>in3</fullName>
            </value>
            <value>
                <fullName>ft3</fullName>
            </value>
            <value>
                <fullName>gallon (U.S.)</fullName>
            </value>
            <value>
                <fullName>m3</fullName>
            </value>
            <value>
                <fullName>liter</fullName>
            </value>
            <value>
                <fullName>gallon (Imperial)</fullName>
            </value>
            <value>
                <fullName>barrel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>