force-app/main/default/objects/Volume__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Multiplier__c</columns>
    <columns>Volume_UOM_From__c</columns>
    <columns>Volume_UOM_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>